@@ -1,4 +1,4 @@
-dnl Copyright (C) 1993-2002 Free Software Foundation, Inc.
+dnl Copyright (C) 1993-2008 Free Software Foundation, Inc.
 dnl This file is free software, distributed under the terms of the GNU
 dnl General Public License.  As a special exception to the GNU General
 dnl Public License, this file may be distributed as part of a program
@@ -7,7 +7,7 @@ dnl the same distribution terms as the rest of that program.
 
 dnl From Bruno Haible, Marcus Daniels.
 
-AC_PREREQ(2.13)
+AC_PREREQ(2.61)
 
 AC_DEFUN([CL_CC_CPLUSPLUS],
 [AC_REQUIRE([AC_PROG_CPP])
@@ -27,12 +27,11 @@ AC_SUBST(CC_CPLUSPLUS)dnl
 
 AC_DEFUN([CL_CXX_WORKS],
 [AC_CACHE_CHECK(whether CXX works at all, cl_cv_prog_cxx_works, [
-AC_LANG_SAVE()
-AC_LANG_CPLUSPLUS()
+AC_LANG_PUSH(C++)
 AC_TRY_RUN([int main() { exit(0); }],
 cl_cv_prog_cxx_works=yes, cl_cv_prog_cxx_works=no,
 AC_TRY_LINK([], [], cl_cv_prog_cxx_works=yes, cl_cv_prog_cxx_works=no))
-AC_LANG_RESTORE()
+AC_LANG_POP(C++)
 ])
 case "$cl_cv_prog_cxx_works" in
   *no) echo "Installation or configuration problem: C++ compiler cannot create executables."; exit 1;;
