@@ -1,5 +1,10 @@
 2008-05-27  Sam Steingold  <sds@gnu.org>
 
+	* m4/c++.m4, m4/general.m4: avoid obsolete macros:
+	use AC_LANG_PUSH/AC_LANG_POP instead of AC_LANG_SAVE/AC_LANG_RESTORE
+
+2008-05-27  Sam Steingold  <sds@gnu.org>
+
 	* eval.d (unused): undef before #include "lightning.c"
 
 2008-05-26  Sam Steingold  <sds@gnu.org>
